Small fixes on the hero CSS alignment

--- a/stylecontactus.css
+++ b/stylecontactus.css
@@ -1,30 +1,33 @@
 form {
-    display: inline-block;
+    display: block;
     text-align: left;
     color: #022B3A;
-    padding: 10px;
+    padding-left: 10%;
+    padding-right: 25%;
 }
 
 input {
     display: block;
-    width: 75%;
-    border-color: #ede7d974;
-    ;
+    width: 100%;
+    border-color: #768a923d;
     border-radius: 5px;
-    background-color: #cacbc5;
+    background-color: #8f979a5a;
 }
 
 textarea {
-    border-color: #ffff;
+    width: 100%;
+    height: 150px;
+    border-color: #768a923d;
     border-radius: 5px;
-    background-color: #cacbc5;
+    background-color: #8f979a5a;
+    resize: none;
 }
 
 .submit {
     display: block;
     width: 100px;
-    color: #ffff;
-    border-color: #ffff;
+    color: #EDE7D9;
+    border-color: #EDE7D9;
     border-radius: 5px;
     background-color: #022B3A;
 }
